data/derived/fa15/progs/unify/prog0477.ml.out
Characters 85-88:
  else count (acc + 1) sumList (digits n) in
              ^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type int
